--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<url>https://github.com/bhoudu/jedis-storm</url>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jedis.version>2.6.2</jedis.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<logback.version>1.0.13</logback.version>
