--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.zenbeni</groupId>
 	<artifactId>jedis-storm</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<name>jedis-storm</name>
 	<url>https://github.com/bhoudu/jedis-storm</url>
@@ -160,6 +159,6 @@
 		<connection>scm:git:git://github.com/bhoudu/jedis-storm</connection>
 		<url>git://github.com/bhoudu/jedis-storm</url>
 		<developerConnection>scm:git:git://github.com/bhoudu/jedis-storm</developerConnection>
-	</scm>
+  </scm>
 
 </project>
