--- a/pom.xml
+++ b/pom.xml
@@ -37,9 +37,9 @@
 
 		<!-- Apache commons -->
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
@@ -81,27 +81,10 @@
 			<version>${testng.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.fiftyonred</groupId>
-			<artifactId>mock-jedis</artifactId>
-			<version>0.4.0</version>
-			<type>jar</type>
-			<scope>test</scope>
-		</dependency>
 
 	</dependencies>
 
 	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-				<includes>
-					<include>**/*.properties</include>
-					<include>**/*.xml</include>
-				</includes>
-			</resource>
-		</resources>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -129,36 +112,17 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.3</version>
 			</plugin>
-			<plugin>
-				<groupId>pl.project13.maven</groupId>
-				<artifactId>git-commit-id-plugin</artifactId>
-				<version>2.1.12</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>revision</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
-					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-					<skipPoms>true</skipPoms>
-					<generateGitPropertiesFile>true</generateGitPropertiesFile>
-					<generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
-					<abbrevLength>7</abbrevLength>
-					<runOnlyOnce>false</runOnlyOnce>
-					<gitDescribe>
-						<skip>false</skip>
-						<always>false</always>
-						<abbrev>7</abbrev>
-						<dirty>-dirty</dirty>
-						<match>*</match>
-						<forceLongFormat>false</forceLongFormat>
-					</gitDescribe>
-				</configuration>
-			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>**/*.properties</include>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 	<scm>
